<resources>
    <string name="app_name">ChavrutaMatch</string>
    <string name="action_settings">Settings</string>
    <string name="motto">Hatzlacha \nTogether</string>
    <string name="host_class_message_string">Include helpful info like:
        \n -An overview of subject/goal of learning
        \n -Materials that would be helpful to bring
        \n -Or any welcoming message</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_login">Login</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN"> a0d9b9122b74867fe91c3df3085ded7b</string>
    <string name="FACEBOOK_APP_ID">815662338593470</string>   
    <string name="login_phone_label">Login By Phone</string>
    <string name="login_email_label">Login By Email</string>

    //login protocol scheme is the appID preceeded by "ak"
    <string name="ak_login_protocol_scheme">ak815662338593470</string>

    //SharedPref keys
    <string name="user_phone_key">user phone number key</string>
    <string name="user_email_key">user email key</string>
    <string name="user_account_id_key">user account id key</string>
    <string name="user_bio_key">user bio key</string>
    <string name="user_avatar_number_key">user avatar number key</string>
    <string name="user_last_name_key">user last name key</string>
    <string name="user_first_name_key">user first name key</string>
    <string name="user_name_key">user name key</string>
    <string name="user_city_state_key">user city state key</string>
    //string form of uri from custom avatar
    <string name="custom_user_avatar_string_uri_key">user custom avatar Uri key</string>


    //add a bio activity
    <string name="add_a_bio">Other Users Want to Know About Your Learning!</string>
<string name="hint_user_name">User Name</string>
    <string name="user_avatar_number">User Avatar</string>
    <string name="user_first_name">User First Name</string>
    <string name="user_last_name">User Last Name</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="user_email">User Email</string>
    <string name="user_bio">Introduce Yourself: List your interests in learning, teaching,
        and background</string>
    <string name="skip_bio">Skip for Now</string>
    <string name="user_data_file">user_data</string>
    <string name="reset">reset</string>
    <string name="user_priv_policy_consent">user_policy_consent</string>


    //Main Activity
    <string name="awaiting_match">Awaiting" + System.getProperty("line.separator") +  "Match"</string>
    <string name="underline_your_hosting"><u>You\'re Hosting</u></string>
    <string name="alphanumeric_input">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890- .!?,:/ </string>
    <string name="alphanumeric_address_input">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890?.#!- ,:/ </string>
    <string name="user_avatar_base_64_key">user avatar base 64 key</string>
    <string name="new_user_registered">New User Registered!</string>
    <string name="class_unreg">Class Unregistered!</string>
    <string name="confirmed_request">Learner was notified!</string>
    <string name="requestSent">Chavruta Request Sent!</string>
    <string name="new_class_reg">New Class Registered!</string>
    <string name="torah_topic">Torah Topic</string>
    <string name="no_host_message">Host did not enter a description for this class</string>
    <string name="info_swipe_to_unregister">Swipe to Unregister Class</string>
    <string name="host_a_chavruta_session">Host a Chavruta Session</string>
    <string name="my_chavrutas">My Chavrutas</string>
    <string name="get_db_from_server">Get Db From Server</string>
</resources>
