<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_user_bio_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/fl_user_pic"
            android:layout_width="85dp"
            android:layout_height="79dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">


            <ImageView
                android:id="@+id/iv_user_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_unknown_user"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="319dp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="29dp"
                android:layout_height="34dp"
                android:layout_gravity="start|top"
                android:background="@null"
                app:srcCompat="@android:drawable/ic_input_add" />

        </FrameLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/add_a_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/add_a_bio"
        android:textColor="@color/matchColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_user_bio_top" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:id="@+id/ll_scrollview_container"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_a_bio"
        >

        <ScrollView
            android:id="@+id/sv_add_bio"
            android:layout_width="match_parent"
            android:layout_height="424dp"
            android:background="#eff0f2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_scrollview_container">

            <LinearLayout
                android:id="@+id/fl_text_input_layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_a_bio">

                //user name

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_name"
                    style="@style/AddBioTextInputLayoutStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_a_bio">

                    <EditText
                        android:id="@+id/user_name"
                        style="@style/AddBioEditTextStyle"
                        android:hint="@string/hint_user_name" />

                </android.support.design.widget.TextInputLayout>

                //user avatar number

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_avatar_number"
                    style="@style/AddBioTextInputLayoutStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_user_name">

                    <EditText
                        android:id="@+id/user_avatar_number"
                        style="@style/AddBioEditTextStyle"
                        android:hint="@string/user_avatar_number" />

                </android.support.design.widget.TextInputLayout>

                //user first name

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_first_name"
                    style="@style/AddBioTextInputLayoutStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_user_avatar_number">

                    <EditText
                        android:id="@+id/user_first_name"
                        style="@style/AddBioEditTextStyle"
                        android:hint="@string/user_first_name" />

                </android.support.design.widget.TextInputLayout>

                //user last name

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_last_name"
                    style="@style/AddBioTextInputLayoutStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_user_first_name">

                    <EditText
                        android:id="@+id/user_last_name"
                        style="@style/AddBioEditTextStyle"
                        android:hint="@string/hint_user_name" />

                </android.support.design.widget.TextInputLayout>

                //user phone number

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_phone_number"
                    style="@style/AddBioTextInputLayoutStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_user_last_name">

                    <EditText
                        android:id="@+id/et_user_phone_number"
                        style="@style/AddBioEditTextStyle"
                        android:hint="@string/user_phone_number" />

                </android.support.design.widget.TextInputLayout>

                //user email

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_email"
                    style="@style/AddBioTextInputLayoutStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_user_phone_number">

                    <EditText
                        android:id="@+id/et_user_email"
                        style="@style/AddBioEditTextStyle"
                        android:hint="@string/user_email" />

                </android.support.design.widget.TextInputLayout>

                //user bio

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_bio"
                    style="@style/AddBioTextInputLayoutStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_user_email">

                    <EditText
                        android:id="@+id/et_user_bio"
                        style="@style/AddBioEditTextStyle"
                        android:layout_height="100dp"
                        android:hint="@string/user_bio" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>


        <Button
            android:id="@+id/skip_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/match_color_rounded_corners"
            android:text="Skip?"
            android:onClick="skipBio"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ll_scrollview_container"
            app:layout_constraintBottom_toTopOf="parent"
            />

    </LinearLayout>
    <!--<string name="skip_bio">Skip for Now</string>-->


</android.support.constraint.ConstraintLayout>
